@@ -1,3 +1,8 @@
+2012-01-02  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51462
+	* g++.dg/cpp0x/constexpr-99.C: New test.
+
 2012-01-02  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/20140
